# heinapp-backend-service

./: Dockerfile  README.md  calendar.ipynb  conftest.py  docker-compose.yml  docker-entrypoint-dev.sh  mypy.ini  pyproject.toml
.github/workflows/: deploy.yml
calendar_app/: README.md  admin.py  models.py  serializers.py  services.py  urls.py  views.py
calendar_app/helpers/: __init__.py  date_helpers.py  event_helpers.py  sync_helpers.py
calendar_app/migrations/: 0001_initial.py  0002_calendarevent_exdate_calendarevent_rrule.py  0003_remove_calendarevent_unique_uid_recurrence_and_more.py
calendar_app/tests/: conftest.py  test_calendar.http  test_views.py
conf/: settings.py  test_settings.py  urls.py
conf/settings_parts/: logging.py
contact/: README.md  __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
contact/helpers/: __init__.py  contact_emails_helpers.py
contact/migrations/: 0001_initial.py
contact/tests/: test_contact.http  test_views.py
core/: exception_handler.py
core/management/commands/: wait_for_db.py
deployment/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS.md  deploy-production.sh  deploy-staging.sh
deployment/caddy/: Caddyfile.production  Caddyfile.staging  README.md
templates/djoser/email/: activation_email.html  confirmation_email.html  password_reset_email.html
users/: admin.py  email.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py
users/tests/: test_users.http
workshop/: admin.py  models.py  serializers.py  urls.py  views.py
workshop/helpers/: slot_helpers.py
workshop/migrations/: 0001_initial.py
workshop/tests/: test_views.py  test_workshop.http
