[project]
name = "heinapp-backend-service"
version = "0.1.0"
description = "Backend service for HeinApp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=2.0.1",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "djoser>=2.3.1",
    "environs>=14.2.0",
    "psycopg>=3.2.9",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9,<6.0",
    "djangorestframework-stubs>=3.16.8,<4.0",
    "freezegun>=1.5.5,<2.0",
    "ipykernel>=7.1.0,<8.0",
    "mypy>=1.19.1,<2.0",
    "pre-commit>=4.5.1,<5.0",
    "pytest>=9.0.2,<10.0",
    "pytest-cov>=7.0.0,<8.0",
    "pytest-django>=4.11.1,<5.0",
    "ruff>=0.15.0,<1.0",
    "types-python-dateutil>=2.9.0.20260124",
]
prod = ["gunicorn>=22.0.0", "uvicorn[standard]>=0.29.0"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]
line-length = 120
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401", "F403", "F405", "F811"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.test_settings"
norecursedirs = ["build", "bin", "dist", "docs", ".git", "static", "templates"]
addopts = ["-v", "--capture=no", "--cov", "--cov-config=pyproject.toml"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/apps.py",
    "*/admin.py",
    "*/settings.py",
    "conftest.py",
    "*/__init__.py",
]
